# LLMs-for-Scalable-Deliberation

./: .env_example  .gitignore  README.md  README_batch_summarization.md  akc.js  bootstrap.min.css  convergence-plot-d3.html  css?family=Open+Sans:700,400,300.css  debug_api_response.py  evaluation_results_direct.json  evaluation_results_direct.json_test.json  evaluation_results_protest.txt  fader.js  index.html  js?id=G-LYNRTVQ506  main.py  pyproject.toml  script.js
config/: batch_evaluation_config.yaml  batch_summarization_config.yaml  evaluation_config.yaml  human_llm_correlation.py
datasets/: GenAI.json  LouisvilleCivicAssembly.json  README_dataset.md  bowling-green.json  synthetic_test.jsonl
datasets/annotation_V0_V1_dataset/: Binary-Health-Care-Policy.json  Binary-Online-Identity-Policies.json  Binary-Refugee-Policies.json  Binary-Tariff-Policy.json  Openqa-Tipping-System.json  (+5 more)
docs/: DebertaEvaluator_Usage.md  summary_with_llm.md
scripts/: README_batch_evaluation.md  README_batch_summarization.md  README_evaluation.md  aggregate_results_to_csv.py  analyze_summary_lengths.py  analyze_validation_statistics.py  batch_evaluate_summaries.py  batch_gen_summarization.py  batch_human_aligned_evaluation_summaries.py  batch_regression_evaluate.py  check_label_distribution.py  check_missing_details.py  count_summaries.py  debug_training_issue.py  evaluate_with_deberta.py  ood_training_example.sh  resubmit_missing.py  run_direct_ordering.sh  run_optimized_regression.sh  test_sum_comments.py  validate_data_quality.py
tests/: model_test.py  test_ood_eval.sh  unit_test.py
(+20034 files in other folders)
