[project]
name = "llms-scalable-deliberation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "wordcloud>=1.9.4",
]
